<resources>
    <string name="app_name">PairHeal</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="love">Made with &#x2764; for the world</string>
    <string name="agora_app_id">b9ad464ce9464eadb4c00dc4d30b75d0</string>
    <string name="back4app_server_url">https://api.parse.buddy.com/parse/</string>
    <string name="back4app_app_id">68db1e92-a401-4787-94f4-ebb50718df81</string>
    <string name="back4app_client_key">vo8JOtjyYX0i1q7IJ0M0Lq0Lcl5LKIDl</string>
    <string name="channel_name">sinch_call_channel</string>
    <string name="channel_description">sinch_call_channel_description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_job">JobActivity</string>
    <string name="title_activity_new_sign_up">NewSignUpActivity</string>
    <string name="signup_msg_1">Glad to meet you.
Complete the details below so we can help you build a strong profile to get maximum jobs.

</string>
    <string name="title_activity_sinch_call_user">SinchCallUserActivity</string>
    <string name="title_activity_jitsi_video_call">JitsiVideoCallActivity</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="home_title_job_feed">Home</string>
    <string name="home_title_messages">Messages</string>
    <string name="home_title_jobs">Jobs</string>
    <string name="home_title_more">More</string>
    <string name="send_link">SEND LINK</string>
    <string name="degree_certi">Degree/Certification</string>
    <string name="start_year">Start Year</string>
    <string name="end_year">End Year</string>
    <string name="forgot_password">Forgot password</string>
    <string name="recommended_jobs">Recommended Jobs</string>
    <string name="other_jobs">Other Jobs</string>
    <string name="proposal_sample_message">I am Mamata and i would love to help you with your case. I have understood the case you have posted. I have done many such projects for clients without fail. I have experience of over 10 years in taxation and corporate law. I have been practicing in Delhi High Court and ITAT and district court.</string>
    <string name="job_milestone_list">Total 20,000 INR\nMilestone 1 : 5000 INR\nMilestone 1 : 5000 INR\nMilestone 1 : 5000 INR\nMilestone 1 : 5000 INR</string>
    <string name="signup_msg_4">What are your areas of expertise ? \n Your job feed will be made out of the practice areas you select. </string>
    <string name="signup_msg_5">One last step before you start making business. \nTap to upload your profile picture. Make sure its neat and professional.</string>
    <string name="job_time">15 days from submission of relevant information and documents</string>
    <string name="forgot_password_label">Forgot password?</string>
    <string name="reset_pass_email_link_label">Enter your email address and we\'ll send a link to reset your password</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password_statement">Forgot password</string>
    <string name="new_to_wizuser">New to PairHeal ?</string>
    <string name="sign_up_with_email">SIGN UP WITH EMAIL</string>
    <string name="signup_agree_tc">By Joining you agree to \nWizcounsel\'s <a href="https://wizuser.com/terms-of-use/">terms of service</a></string>
    <string name="empty_feed_no_jobs">We are sorry but we could not find any jobs for you.</string>
    <string name="empty_feed_no_internet">Sorry, we are not able to load the feed. Please check your internet connection.</string>
    <string name="empty_submitted_proposals">This is where we show proposals you have sent on different jobs. Looks like you have not sent any proposals.</string>
    <string name="empty_conversations">Whenever a Client messages you to discuss the proposal, it appears here. Sorry, you have not received any messages on your proposals.</string>
    <string name="empty_job_in_progress">Jobs which are in progress are listed here. Unfortunately, you do not have any job which is under progress.</string>
    <string name="empty_files">Upload and share relevant files to complete the work on time.</string>
    <string name="empty_job_history">This is where we show all the jobs that are closed. You can download the invoices and payments receipts from here.</string>
    <string name="empty_notifications">You don\'t have any notifications. We will notify immediately on anything important coming your way.</string>
    <string name="otp_enter_prompt">Enter 4 digit OTP received</string>
    <string name="verify_mobile">Verify Mobile</string>
    <string name="lets_send_proposal">Let\'s send your proposal to</string>
    <string name="university">University</string>
    <string name="type_here_hint">Type here …</string>
    <string name="notifications">Notifications</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="delete_account">Delete Account</string>
    <string name="about">About</string>
    <string name="tnc">Terms and Conditions</string>
    <string name="pp">Privacy Policy</string>
    <string name="osl">Open source licenses</string>
    <string name="app_version">App version</string>
    <string name="voice_call">Voice call</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_started">GET STARTED</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="document">Document</string>
    <string name="edit_payment_terms">Edit Payment Terms</string>
    <string name="edit_milestone_due_dates">Edit Milestone Due Dates</string>
    <string name="milestones">Milestones</string>
    <string name="fees_inr">Fees (INR)</string>
    <string name="completion_time_days">Completion time (days)</string>
    <string name="select_all">SELECT ALL</string>
    <string name="cancel">Cancel</string>
    <string name="back_to_feed">Back to feed</string>
    <string name="contract_start_date">Contract start date</string>
    <string name="job_title">Job Title</string>
    <string name="job_description">Job Description</string>
    <string name="fees">Fees</string>
    <string name="completion_time">Completion Time</string>
    <string name="questions_answered">Questions Answered</string>
    <string name="end_contract">End Contract</string>
    <string name="reason_for_ending_contract">Reason for ending contract</string>
    <string name="reason_1">User is irresponsive</string>
    <string name="reason_2">User did not provide relevant information</string>
    <string name="reason_3">Other reason</string>
    <string name="add_more_information">Add more information</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
    <string name="add_a_review">Add a review</string>
    <string name="submit_request">Submit Request</string>
    <string name="fees_summary">Fees Summary</string>
    <string name="total_fees">Total fees</string>
    <string name="paid">Paid</string>
    <string name="pending">Pending</string>
    <string name="posted_by">Posted by</string>
    <string name="new_delhi">New Delhi</string>
    <string name="submit_proposal">SUBMIT PROPOSAL</string>
    <string name="profile">Profile</string>
    <string name="bio_caption_and_fees">Bio,Caption and Fees</string>
    <string name="business_details">Business Details</string>
    <string name="expertise_areas">Expertise Areas</string>
    <string name="courts">Courts</string>
    <string name="verification_documents">Verification Documents</string>
    <string name="payment_details">Payment details</string>
    <string name="work_history">Work History</string>
    <string name="refer_friends">Refer Friends</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign out</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="account_number">Account Number</string>
    <string name="confirm_account_number">Confirm Account Number</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="mobile">Mobile (Optional)</string>
    <string name="edit_my_mobile_number">Edit my mobile number</string>
    <string name="personal_message">Personal message</string>
    <string name="negotiate_text">Fees can be negotiated once client chats with you after getting your proposal</string>
    <string name="review_proposal">REVIEW PROPOSAL</string>
    <string name="send_proposal_terms_label">By clicking send proposal you agree to our privacy policy and terms and conditions</string>
    <string name="send_proposal">SEND PROPOSAL</string>
    <string name="start_date">Start date</string>
    <string name="files">Files</string>
    <string name="due_date_ddmmyyyy">Due Date (ddmmyyyy)</string>
    <string name="ex_24092018">Ex. 24092018</string>
    <string name="amount_in_inr">Amount in INR</string>
    <string name="ex_3000">Ex. 3000</string>
    <string name="edit">Edit</string>
    <string name="fixed_fees">Fixed fees</string>
    <string name="from_complete_submission_of_documents_and_information_by_client">from complete submission of documents and information by client</string>
    <string name="completion_date">Completion Date</string>
    <string name="see_job_details">See Job Details</string>
    <string name="education_and_experience">Education and Experience</string>
    <string name="profile_picture">Profile picture</string>
    <string name="basic_details">Basic Details</string>
    <string name="profile_caption">Profile caption</string>
    <string name="ex_senior_attorney_ca">Ex. Senior Attorney, CA</string>
    <string name="brief_bio">Brief bio</string>
    <string name="consultation_fees">Consultation Fees</string>
    <string name="rs_4000">Rs. 4000</string>
    <string name="per_hour">Per hour</string>
    <string name="what_business_practice_do_you_have">What business practice do you have</string>
    <string name="select_business_type">Select Business Type</string>
    <string name="business_name">Business name</string>
    <string name="company_name">Company name</string>
    <string name="type_of_entity">Type of entity</string>
    <string name="select_entity">Select entity</string>
    <string name="membership_id">Membership ID</string>
    <string name="membership_id_icai_bar_council_icsi">Membership id - ICAI / Bar Council / ICSI</string>
    <string name="gst_number">GST Number</string>
    <string name="gst_ex">29ABCDE1234F2Z5</string>
    <string name="pan_number">PAN number</string>
    <string name="pan_ex">ABCDE1234Z</string>
    <string name="work_address">Work Address</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="select_state">Select state</string>
    <string name="education">Education</string>
</resources>