<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="RtlHardcoded,ContentDescription"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/forgot_pass_label_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/label_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="@string/forgot_password_label"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_big"
            android:layout_margin="32dp"
            android:text="@string/reset_pass_email_link_label"
            android:textSize="16sp" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@mipmap/ic_launcher_foreground" />

    <!--<ImageView
        android:id="@+id/username_logo"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="32dp"
        android:src="@drawable/ic_email_black_24dp" />-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="32dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/separator"
            android:hint="@string/email_label"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            tools:ignore="UnusedAttribute" />
        <!--app:backgroundTint="@color/colorAccent"-->

    </android.support.design.widget.TextInputLayout>

    <!-- <ImageView
         android:id="@+id/password_logo"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_below="@+id/username_logo"
         android:layout_marginLeft="32dp"
         android:src="@drawable/ic_lock_black_24dp" />-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_email"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:backgroundTint="@color/separator"
            android:hint="@string/password_label"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:ignore="UnusedAttribute" />

    </android.support.design.widget.TextInputLayout>
    <!--
            app:backgroundTint="@color/colorAccent" />
    -->

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/til_pass"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/border_pink"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_pass"
        android:layout_alignRight="@+id/til_pass"
        android:clickable="true"
        android:focusable="true"
        android:gravity="right"
        android:padding="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_login"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/new_to_wizuser"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_signup"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/border_black"
        android:gravity="center"
        android:text="@string/sign_up_with_email"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <include layout="@layout/progress_bar_center" />


</RelativeLayout>