<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="RtlHardcoded,ContentDescription,unusedAttribute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:backgroundTint="@color/separator"
                android:hint="@string/first_name"
                android:inputType="textCapWords" />
            <!--app:backgroundTint="@color/colorAccent"-->

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="24dp"

                android:backgroundTint="@color/separator"
                android:gravity="left|center_vertical"
                android:hint="@string/last_name"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="24dp"
                android:backgroundTint="@color/separator"
                android:gravity="left|center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="24dp"
                android:backgroundTint="@color/separator"
                android:gravity="left|center_vertical"
                android:hint="@string/password_label"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <include layout="@layout/progress_bar_center"/>

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_above="@+id/view"
        android:background="@drawable/border_black"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:visibility="visible" />


</RelativeLayout>